--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -108,12 +108,15 @@ tile.extrautils:cobblestone_compressed.9.name=Double Compressed Dirt
 tile.extrautils:conveyor.name=Conveyor Belt
 tile.extrautils:cursedearthside.name=Cursed Earth
 tile.extrautils:curtains.name=Blackout Curtains
-tile.extrautils:dark_portal.name=Portal to the 'Deep Dark'
+tile.extrautils:dark_portal.name=Portal to The Deep Dark
+tile.extrautils:dark_portal.1.name=Portal to The Last Millenium
 tile.extrautils:decorativeBlock1.0.name=Edged Stone Bricks
 tile.extrautils:decorativeBlock1.1.name=Ender-infused Obsidian
 tile.extrautils:decorativeBlock1.10.name=Gravel Road
 tile.extrautils:decorativeBlock1.11.name=Ender Core
 tile.extrautils:decorativeBlock1.12.name=Diamond-Etched Computational Matrix
+tile.extrautils:decorativeBlock1.13.name=Ender-Sand Alloy
+tile.extrautils:decorativeBlock1.14.name=Carved 'Eminence' Stone
 tile.extrautils:decorativeBlock1.2.name=Burnt Quartz
 tile.extrautils:decorativeBlock1.3.name=Frosted Stone
 tile.extrautils:decorativeBlock1.4.name=Border Stone
@@ -125,6 +128,7 @@ tile.extrautils:decorativeBlock1.9.name=Sandy Glass
 tile.extrautils:decorativeBlock2.0.name=Thickened Glass
 tile.extrautils:decorativeBlock2.1.name=Edged Glass
 tile.extrautils:decorativeBlock2.10.name=Dark Glass
+tile.extrautils:decorativeBlock2.11.name=Reinforced Dark Glass
 tile.extrautils:decorativeBlock2.2.name=Glass Bricks
 tile.extrautils:decorativeBlock2.3.name=Carved Glass
 tile.extrautils:decorativeBlock2.4.name=Golden Edged Glass
@@ -298,6 +302,8 @@ tile.extrautils:cursedearthside.documentation.3=Cursed Earth is created during t
 tile.extrautils:curtains.documentation=These dark curtains allow you to keep that pesky light out certain areas without closing them off entirely. Blackout curtains will reduce light by approximately half its maximum and can be passed through easily.
 tile.extrautils:dark_portal.documentation.0=As an experienced miner you naturally wish to mine deeper and further than ever before into areas of natural wealth. The deep dark is a realm far below the void, filled with natural resources and deadly enemies. Some say that the darkness within this realm is alive and will consume any unlucky adventurer who wanders too far into it. Remember to bring torches.
 tile.extrautils:dark_portal.documentation.1=Torches will not protect you completely, however since mobs will spawn at all light levels in the Deep Dark. Magnum torches and Chandeliers will still prevent spawning.
+tile.extrautils:dark_portal.1.documentation.0=Sometimes you just wish to get away from it all, well here's your chance to go to a place where there is literally nothing to bother you. Right click the portal will teleport you outside the normal flow of time, from there you will inevitably end up drifting to the end of time, just a few centuries before reality finally dissolves away.
+tile.extrautils:dark_portal.1.documentation.1=This place is known as 'The Last Millenium'. All life, energy, knowledge, passion, struggle, philosophy and meaning is just a few short centuries from being rendered fully pointless. On the plus side, rent is very cheap now.
 tile.extrautils:decorativeBlock1.11.documentation=The Ender core is the upgraded form of magical wood and boosts nearby enchanting tables by 20 levels (up to the max of 30 levels).
 tile.extrautils:decorativeBlock1.8.documentation=Magical wood is infused with powerful magic. It will boost the max enchantment level of nearby enchanting tables by 5 levels (up to the max of 30 levels).
 tile.extrautils:decorativeBlock2.10.documentation=Dark glass has the unique property of being completely transparent and opaque at the same time. Which makes absolutely no sense from a physics perspective but just roll with it.
