--- a/lang/ko_KR.lang
+++ b/lang/ko_KR.lang
@@ -108,15 +108,15 @@ tile.extrautils:cobblestone_compressed.9.name=이중 압축된 흙
 tile.extrautils:conveyor.name=컨베이어 벨트
 tile.extrautils:cursedearthside.name=저주받은 땅
 tile.extrautils:curtains.name=그늘 커튼
-tile.extrautils:dark_portal.name=딥다크로 가는 포탈
-tile.extrautils:dark_portal.1.name=밀레니엄으로 가는 포탈
+tile.extrautils:dark_portal.name=딥 다크로 가는 포탈
+tile.extrautils:dark_portal.1.name=라스트 밀레니엄으로 가는 포탈
 tile.extrautils:decorativeBlock1.0.name=테두른 석재 벽돌
 tile.extrautils:decorativeBlock1.1.name=엔더가 주입된 흑요석
 tile.extrautils:decorativeBlock1.10.name=자갈 도로
 tile.extrautils:decorativeBlock1.11.name=엔더 코어
 tile.extrautils:decorativeBlock1.12.name=다이아몬드 식각 계산 메트릭스
 tile.extrautils:decorativeBlock1.13.name=엔더사 합금
-tile.extrautils:decorativeBlock1.14.name=Carved 'Eminence' Stone
+tile.extrautils:decorativeBlock1.14.name=조각된 에미넌스 돌
 tile.extrautils:decorativeBlock1.2.name=불탄 석영
 tile.extrautils:decorativeBlock1.3.name=얼어붙은 돌
 tile.extrautils:decorativeBlock1.4.name=테두른 돌
@@ -128,7 +128,7 @@ tile.extrautils:decorativeBlock1.9.name=모래 유리
 tile.extrautils:decorativeBlock2.0.name=두꺼운 유리
 tile.extrautils:decorativeBlock2.1.name=테두른 유리
 tile.extrautils:decorativeBlock2.10.name=어두운 유리
-tile.extrautils:decorativeBlock2.11.name=Reinforced Dark Glass
+tile.extrautils:decorativeBlock2.11.name=강화된 어두운 유리
 tile.extrautils:decorativeBlock2.2.name=유리 벽돌
 tile.extrautils:decorativeBlock2.3.name=조각된 유리
 tile.extrautils:decorativeBlock2.4.name=금 테두른 유리
@@ -140,8 +140,8 @@ tile.extrautils:decorativeBlock2.9.name=사각 유리
 tile.extrautils:drum.0.name=드럼
 tile.extrautils:drum.1.name=베드라키움 드럼
 tile.extrautils:enderQuarry.name=엔더 쿼리
-tile.extrautils:enderQuarryUpgrade.0.name=엔더 쿼리 업그레이드 베이스 
-tile.extrautils:enderQuarryUpgrade.1.name=엔더 쿼리 월드 홀 업그레이드
+tile.extrautils:enderQuarryUpgrade.0.name=엔더 쿼리 업그레이드 기반
+tile.extrautils:enderQuarryUpgrade.1.name=엔더 쿼리 비매립 업그레이드
 tile.extrautils:enderQuarryUpgrade.2.name=엔더 쿼리 섬세한 손길 업그레이드
 tile.extrautils:enderQuarryUpgrade.3.name=엔더 쿼리 행운I 업그레이드
 tile.extrautils:enderQuarryUpgrade.4.name=엔더 쿼리 행운II 업그레이드
