--- a/lang/ru_RU.lang
+++ b/lang/ru_RU.lang
@@ -44,6 +44,41 @@ item.extrautils:nodeUpgrade.6.name=Приёмник Края
 item.extrautils:nodeUpgrade.7.name=Улучшение «Поиск в глубину»
 item.extrautils:nodeUpgrade.8.name=Улучшение «Поиск в ширину»
 item.extrautils:nodeUpgrade.9.name=Улучшение «Круговая система»
+item.extrautils:nodeUpgrade.10.name=Предметный фильтр (Продвинутый)
+
+item.extrautils:nodeUpgrade.10.program.default=Default.exe
+item.extrautils:nodeUpgrade.10.program.block=Block.exe
+item.extrautils:nodeUpgrade.10.program.item=Item.exe
+item.extrautils:nodeUpgrade.10.program.hassubtypes=HasSubTypes.exe
+item.extrautils:nodeUpgrade.10.program.stacksize1=StackSize1.exe
+item.extrautils:nodeUpgrade.10.program.stacksize64=StackSize64.exe
+item.extrautils:nodeUpgrade.10.program.oredicore=OreDicOre.exe
+item.extrautils:nodeUpgrade.10.program.oredicingot=OreDicIngot.exe
+item.extrautils:nodeUpgrade.10.program.oredicnugget=OreDicNugget.exe
+item.extrautils:nodeUpgrade.10.program.oredicblock=OreDicBlock.exe
+item.extrautils:nodeUpgrade.10.program.oredicgem=OreDicGem.exe
+item.extrautils:nodeUpgrade.10.program.oredicdust=OreDicDust.exe
+item.extrautils:nodeUpgrade.10.program.energyitem=EnergyItem.exe
+item.extrautils:nodeUpgrade.10.program.energyitemempty=EnergyItemEmpty.exe
+item.extrautils:nodeUpgrade.10.program.energyitem50=EnergyItem<50.exe
+item.extrautils:nodeUpgrade.10.program.energyitemfull=EnergyItemFull.exe
+item.extrautils:nodeUpgrade.10.program.food=Food.exe
+item.extrautils:nodeUpgrade.10.program.smeltable=Smeltable.exe
+item.extrautils:nodeUpgrade.10.program.pulverizer=Pulverizer.exe
+item.extrautils:nodeUpgrade.10.program.enchanted=Enchanted.exe
+item.extrautils:nodeUpgrade.10.program.enchantable=Enchantable.exe
+item.extrautils:nodeUpgrade.10.program.hascontaineritem=HasContainerItem.exe
+item.extrautils:nodeUpgrade.10.program.durabilitybarshown=DurabilityBarShown.exe
+item.extrautils:nodeUpgrade.10.program.durabilitybarfull=DurabilityBarFull.exe
+item.extrautils:nodeUpgrade.10.program.durabilitybar90=DurabilityBar<90.exe
+item.extrautils:nodeUpgrade.10.program.durabilitybar50=DurabilityBar<50.exe
+item.extrautils:nodeUpgrade.10.program.durabilitybar10=DurabilityBar<10.exe
+item.extrautils:nodeUpgrade.10.program.durabilitybarempty=DurabilityBarEmpty.exe
+item.extrautils:nodeUpgrade.10.program.hasdisplayname=HasDisplayName.exe
+item.extrautils:nodeUpgrade.10.program.repairable=Repairable.exe
+item.extrautils:nodeUpgrade.10.program.hasdispenserbehaviour=HasDispenserBehaviour.exe
+item.extrautils:nodeUpgrade.10.program.plantable=Plantable.exe
+
 item.extrautils:paintbrush.name=Кисточка
 item.extrautils:scanner.name=Переносной сканер
 item.extrautils:shears.name=Острые ножницы
@@ -72,7 +107,7 @@ material.extrautils.bedrockium=Бедрокиум
 material.extrautils.bedrockium.ability=Тяжелый
 material.extrautils.magicwood=Магическая древесина
 material.extrautils.magicwood.ability=Модифицируемая
-material.extrautils.unstableIngot=Unstable Induced
+material.extrautils.unstableIngot=Нестабильно-индуцированный
 material.extrautils.unstableIngot.ability=Математический!
 
 tile.extrautils:angelBlock.name=Ангельский блок
@@ -148,6 +183,7 @@ tile.extrautils:decorativeBlock2.8.name=Любовное стекло
 tile.extrautils:decorativeBlock2.9.name=Квадратное стекло
 tile.extrautils:drum.0.name=Барабан
 tile.extrautils:drum.1.name=Барабан из бедрокия
+tile.extrautils:enderCollector.name=Коллектор Края
 tile.extrautils:enderQuarry.name=Карьер Края
 tile.extrautils:enderQuarryUpgrade.0.name=Улучшение карьера Края «Основа»
 tile.extrautils:enderQuarryUpgrade.1.name=Улучшение карьера Края «Всемирные отверстия»
@@ -228,6 +264,8 @@ tile.extrautils:spike_base_wood.name=Деревянный шип
 tile.extrautils:timer.name=Красные часы
 tile.extrautils:trading_post.name=Стол обмена
 tile.extrautils:trashcan.name=Мусорная корзина
+tile.extrautils:trashcan.1.name=Мусорная корзина (Жидкости)
+tile.extrautils:trashcan.2.name=Мусорная корзина (Энергия)
 tile.extrautils:block_bedrockium.name=Блок бедрокия
 
 
