changed the drum translation
Trommel is the music Instrument
while Tonne is used to store liquids

--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -142,8 +142,8 @@ tile.extrautils:decorativeBlock2.6.name=Wirbelglas
 tile.extrautils:decorativeBlock2.7.name=Glowstone-Glas
 tile.extrautils:decorativeBlock2.8.name=Herzglas
 tile.extrautils:decorativeBlock2.9.name=Quadratglas
-tile.extrautils:drum.0.name=Trommel
-tile.extrautils:drum.1.name=Bedrockiumtrommel
+tile.extrautils:drum.0.name=Tonne
+tile.extrautils:drum.1.name=Bedrockiumtonne
 tile.extrautils:enderQuarry.name=Endersteinbruch
 tile.extrautils:enderThermicPump.name=Ender-Thermiepumpe
 tile.extrautils:endMarker.name=Ender-Marker
